# PyTaiko

./: .gitignore  PyTaiko.py  README.md  config.toml  global_funcs.py  main.py  pyproject.toml  requirements.txt  scores_gen3  scores_gen3.db
.github/workflows/: build-portaudio.yml  build_audio.yml  main.yml  portaudio-mac.yml  python-app.yml  python-app2.yml
Songs/13 Recommended/: box.def
Songs/14 Favorites/: box.def
Songs/15 Recently Played/: box.def  song_list.txt
Songs/16 Difficulty Sort/: box.def
Songs/17 New/: box.def
dev/: color2alpha.py
libs/: animation.py  audio.py  background.py  backgrounds.py  chara_2d.py  config.py  file_navigator.py  global_data.py  global_objects.py  screen.py  song_hash.py  texture.py  tja.py  tja2.py  transition.py  utils.py  video.py
libs/audio/: Makefile  audio.c  audio.h  check_deps.py
libs/bg_collabs/: __init__.py  a3.py  animal.py  buttoburst.py  dan.py  imas.py  imas_sidem.py  oshiri.py
libs/bg_objects/: bg_fever.py  bg_normal.py  chibi.py  dancer.py  don_bg.py  fever.py  footer.py  renda.py
scenes/: devtest.py  entry.py  game.py  game_2p.py  loading.py  result.py  settings.py  song_select.py  title.py
scenes/dan/: dan_result.py  dan_select.py  game_dan.py
scenes/practice/: game.py
scenes/two_player/: game.py  result.py  song_select.py
shader/: colortransform.fs  dummy.vs  grayscale_alpha.fs  outline.fs
