[project]
name = "pytaiko"
version = "0.1.0"
description = "Taiko no Tatsujin simulator written in python and raylib"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.5",
    "opencv-python>=4.11.0.86",
    "pydub>=0.25.1",
    "ruff>=0.11.7",
    "scipy>=1.15.2",
    "sounddevice>=0.5.1",
    "audioop-lts; python_version >= '3.13'",
    "moviepy>=2.1.2",
    "raylib-sdl>=5.5.0.2",
    "soundfile>=0.13.1",
    "pandas>=2.3.0",
    "tomlkit>=0.13.3",
]
