[project]
name = "pytaiko"
version = "0.1.0"
description = "Taiko no Tatsujin simulator written in python and raylib"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "moviepy>=2.1.2",
    "pyinstrument>=5.1.1",
    "raylib-sdl>=5.5.0.2",
    "tomlkit>=0.13.3",
]

[tool.vulture]
exclude = ["*.git", "*./.github", "*./.venv", "*./cache"]
paths = ["."]
